# bpmn-ml

./: .gitignore  Dockerfile  compose.yml  config.yaml  datasetload.py  demo_p2s.py  pyproject.toml  utils.py
autogen/: description_models.py  generate_s1_description.py  topics.json
autogen/config/: settings.py
autogen/gen_struct_crew/: crew.txt
autogen/gen_struct_crew/config/: tasks.yaml
dataset/: 1_render.py  bpmn_parser.py  datasetload.py  some.ipynb
dataset/static/: index.html
dataset/static/lib/: bpmn-modeler.development.js  bpmn-viewer.development.js
docs/: BPMN-ML.archimate  BPMN-ML.archimate.bak  arch.md
ocr/: test.py
src/data/: ray_store.py
src/demo/: a.py  b.py  c.py  config.yaml  task_proc_config.py  test.py
src/demo/cluster/: __init__.py  cluster.yaml
src/demo/ingress/: api.py  ui.py
src/diagram/: analyzer.py  description_models.py  executor.py  main.py  task.py
src/diagram/annotate/: b.json  b0.json  binder.py  builder.py  demo.ipynb  description.py  diagram.py  graphgen.py  labeler.py  matcher.py  nest.py  tools.py
src/diagram/ocr/: main.py  model.py
src/diagram/struct/: model.py  yolo.py
src/ingress/: test.py
src/ingress/api/: main.py  model.py
src/ingress/mlclient/: .gitignore  package.json
src/ingress/mlclient/src/: App.tsx
src/ingress/task/: task_manager.py  task_model.py  task_proc_config.py
src/ingress/ui/: main.py
src/renderer/: codegen.py  main.py  renderbpmn.py  rendersvg.py
src/renderer/bundling/: package.json
src/renderer/bundling/public/: app.js  app.js.map  index.html
src/renderer/bundling/src/: app.js
transform/: 1_render.py  bpmn_models.py  bpmn_parser.py  preprocess.py  utils.py  visu.py
workspace/autogen/: description_models.py  gen.ipynb  graphgen_enrich.py  graphgen_skeleton.py  test.xml
workspace/autogen/llm/: bpmn.prompt  bpmn.sys.prompt  generate_s1_description.py  topics.txt
workspace/autogen/llm/gen_struct_crew/: crew.py
workspace/autogen/llm/gen_struct_crew/config/: agents.yaml
workspace/autogen/llmsimple/: bpmn.prompt  bpmn.sys.prompt  gen.py
workspace/ocr/: test.py
