[project]
name = "mltests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bpmn-python>=0.0.18",
    "crewai[tools]>=1.9.3",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "litellm>=1.75.3",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "paddleocr>=2.10.0",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
    "scikit-learn>=1.8.0",
    "tensorflow[and-cuda]>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
