[project]
name = "mltests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bpmn-python>=0.0.18",
    "cairosvg>=2.8.2",
    "celery[redis]>=5.6.2",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "einops>=0.8.2",
    "fastapi>=0.128.0",
    "fastapi-proxy-lib[standard]>=0.3.0",
    "gradio==6.0.1",
    "iplotx>=1.6.0",
    "jinja2==3.1.2",
    "jsrun>=0.1.0",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "nltk>=3.9.2",
    "notebook>=7.5.3",
    "openai>=2.16.0",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "paddleocr>=2.10.0",
    "pandas==2.3.3",
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
    "ray[data,serve]==2.53.0",
    "scikit-learn>=1.8.0",
    "streamlit==1.53.1",
    "tensorflow[and-cuda]>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
