[project]
name = "mltests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "celery[redis]>=5.6.2",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "einops>=0.8.2",
    "fastapi>=0.128.0",
    "iplotx>=1.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "openai>=2.16.0",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "pandas==2.3.3",
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
    "python-multipart>=0.0.22",
    "ray[data,serve]==2.53.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "ultralytics==8.3.160",
    "uvicorn>=0.40.0",
]
